@@ -1,0 +1,6 @@
+GGADT was written by
+
+John Hoffman (jah5@princeton.edu), and
+Michael Tarczon (mtarczon@princeton.edu)
+
+in 2014.
