@@ -14,8 +14,11 @@ See the **ChangeLog** for the gritty details of what's been changed in GGADT ove
 Some features:
 --------------
 * **Self contained** package that depends only upon the existence of a reasonable C and Fortran 90/95 compiler; optionally works with external libraries like OpenMP and FFTW3.
-* Intuitive command-line input (--parameter=value) and the option to create your own parameter files.
-* Configure scripts generated by using the *GNU Autoconf* suite of software -- this should provide decent portability and relatively painless installation across all *nix systems (including Mac OSX).
+* **Intuitive command-line input** (--parameter=value) and the option to create your own parameter files.
+* **GNU Configure scripts** generated by using the *GNU Autoconf* suite of software -- this should provide decent portability and relatively painless installation across all *nix systems (including Mac OSX).
+* **Multiple grain geometries supported** including spherical grains, ellipsoidal grains, and grains composed of an agglomeration of spherical particles 
+* **Single and multiple-composition grains** (multiple-composition grains are only available for agglomerations of particles). Materials are specified by index files which specify the complex index of refraction and dielectric constant as a function of photon energy.
+* **Ability to do integrated cross sections as well as differential-scattering cross section**
 
 
 A word of caution: GGADT has **not been tested on Windows**. If you own a Windows machine and get GGADT to compile and run, let us know what you did and we'll try to relay that information. If you try and *fail* to get GGADT to run, and you'd like to use it on a Windows machine, let us know and we'll try to help.
